--- a/MIS/index.html
+++ b/MIS/index.html
@@ -20,7 +20,7 @@
   <main class="container">
     <section class="hero">
       <h2>Local sellers. Trusted buys.</h2>
-      <p>體驗 Vibe Coding：快速布景、低程式碼上線。</p>
+      <p>更好的交易體驗...</p>
       <div class="searchbar">
         <input id="searchInput" placeholder="搜尋商品或商家..." />
         <button id="searchBtn" class="btn">搜尋</button>
