--- a/HW7_JS1/111304023_JS1_HW7.html
+++ b/HW7_JS1/111304023_JS1_HW7.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>StudentID_HW6_1A2B</title>
+  <title>111304023_1A2B</title>
 </head>
 <body>
 
