--- a/HW8_JS2/111304023_JS2_HW8.html
+++ b/HW8_JS2/111304023_JS2_HW8.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>111304023_JS2_HW8</title> 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="111304023_JS2_HW8.css">
 </head>
 <body>
 
@@ -24,6 +24,6 @@
 
   <p id="result">Result: </p>
 
-  <script src="script.js"></script>
+  <script src="111304023_JS2_HW8.js"></script>
 </body>
 </html>
