--- a/Lab4_GradeStatistics/111304023_JS2_Lab4.html
+++ b/Lab4_GradeStatistics/111304023_JS2_Lab4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>111304023_JS2_Lab4</title> 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="111304023_JS2_Lab4.css">
 </head>
 <body>
 
@@ -41,6 +41,6 @@
     </tfoot>
   </table>
 
-  <script src="script.js"></script>
+  <script src="111304023_JS2_Lab4.js"></script>
 </body>
 </html>
