--- a/Lab4_GradeStatistics/111304023_JS2_Lab4.html
+++ b/Lab4_GradeStatistics/111304023_JS2_Lab4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>111304023_JS2_Lab4</title> 
-  <link rel="stylesheet" href="111304023_JS2_Lab4.css">
+  <link rel="stylesheet" href="111304023_JS2_Lab4.css"> 
 </head>
 <body>
 
@@ -28,9 +28,7 @@
       </tr>
     </thead>
 
-    <tbody id="gradeBody">
-      <!-- 新增的行會插入這裡 -->
-    </tbody>
+    <tbody id="gradeBody"></tbody>
 
     <tfoot>
       <tr>
@@ -41,6 +39,6 @@
     </tfoot>
   </table>
 
-  <script src="111304023_JS2_Lab4.js"></script>
+  <script src="111304023_JS2_Lab4.js"></script> 
 </body>
 </html>
