--- a/HW8_JS2/111304023_JS2_HW8.html
+++ b/HW8_JS2/111304023_JS2_HW8.html
@@ -2,27 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>111304023_JS2_HW8</title> 
+  <title>111304023_JS2_HW8</title>
   <link rel="stylesheet" href="111304023_JS2_HW8.css">
 </head>
 <body>
 
-  <h2>Simple Calculator</h2>
+  <div class="card">
+    <h1>JS Calculator</h1>
 
-  <input type="number" id="num1" placeholder="Number 1">
-  
-  <select id="operator">
-    <option value="+">+</option>
-    <option value="-">-</option>
-    <option value="*">*</option>
-    <option value="/">/</option>
-  </select>
+    <label>Number 1</label>
+    <input type="number" id="num1" placeholder="Enter number">
 
-  <input type="number" id="num2" placeholder="Number 2">
+    <label>Number 2</label>
+    <input type="number" id="num2" placeholder="Enter number">
 
-  <button onclick="calculate()">Calculate</button>
+    <label>Operate way?</label>
+    <select id="operator">
+      <option value="+">+</option>
+      <option value="-">-</option>
+      <option value="*">*</option>
+      <option value="/">/</option>
+    </select>
 
-  <p id="result">Result: </p>
+    <button onclick="calculate()">Add</button>
+
+    <p id="result">Result = </p>
+  </div>
 
   <script src="111304023_JS2_HW8.js"></script>
 </body>
